Adds new Features